--- a/style/style.css
+++ b/style/style.css
@@ -46,7 +46,7 @@
 /* header style */
 .header{
     background-color: #FFF8F3;
-    background-image: url("/images/developer.png"), url("/images/header_bg.png");
+    background-image: url("../images/developer.png"), url("../images/header_bg.png");
     background-repeat: no-repeat;
     background-position: top left, right bottom;
     /* background-size: contain; */
