--- a/style/style.css
+++ b/style/style.css
@@ -136,9 +136,6 @@ main section{
 }
 /* what i do styles */
 
-/* .what-i-do .section-description{
-    line-height: 30px;
-} */
 .skill-sets{
     display: flex;
     gap: 24px;
@@ -219,4 +216,51 @@ footer input[type="text"],footer input[type="email"],footer form textarea{
     font-size: 18px;
     border: none;
     margin-bottom: 24px;
+}
+
+/* responsive styles */
+.hide{
+    display: none;
+}
+@media screen and (max-width:576px) {
+    
+    .skill-sets,
+     .resume-cols, 
+     footer,
+     .about-items,
+     nav,nav>ul, .banner
+     {
+        flex-direction: column;
+    }
+    nav, .banner{
+        margin: 0;  
+    }
+    .header{
+        background-image: none;
+    }
+    .banner-content,.banner-img{
+        width: auto;
+    }
+    .banner-img img{
+        width: 100%;
+    }
+    .about-items{
+        gap: 0px;
+    }
+    .skill-set{
+        width:calc(100% -30px);
+    }
+    .about{
+        padding: 15px;
+    }
+    footer{
+        padding: 0;
+    }
+    .footer-col-1, .footer-col-2{
+        width: 100%;
+        padding:0px;
+    }
+    footer input[type="text"],footer input[type="email"],footer form textarea{
+        width: calc(100% - 30px);
+    }
 }
